--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,91 @@
+
+body{  
+    margin: 0 auto;
+    max-width: 750px;
+    background-color: #f3c58d;
+    
+}
+
+main{ 
+    margin-top: 5%;
+    padding: 20px;
+    background-color: rgb(255 255 255);
+    box-shadow: -5px 5px 17px rgba(128, 128, 128, 0.801);
+    border: 1px solid rgba(128, 128, 128, 0.945);
+    border-radius: 10px;
+}
+
+
+li{
+    text-align: left;
+    margin: 15px;
+    
+}
+
+.list-style-none{
+    padding: 0 5px;
+    list-style: none;
+}
+
+.list-style-none li{
+    text-align:left;
+}
+
+h1,
+h1 a{
+    height: 40px;;
+    padding: auto;
+    font-size: 35px;
+}
+
+a{
+    text-align: center;
+    text-decoration: none;
+    color: rgb(30 64 175);
+    font-size: 18px;
+    font-weight: 800;
+    overflow: auto;
+}
+
+p{
+    text-align: left;
+    margin:0 5%;
+}
+
+
+/*Class*/
 .img-logo{
     width: 35px;
-    height: auto;
+    height: 35px;
+    margin: auto;
 }
 
 .img-recipe{
-    width: 50px;
+    width: 250px;
     height: auto;
+    margin: 2.5% 30%;
 }
+
+.container{
+    max-width: 640px;
+    margin: 0 auto 5% auto;
+    padding: 5px 0;
+    background-color: rgb(243 244 246);
+    border-radius: 5px;
+    box-shadow: -5px 5px 10px rgba(128, 128, 128, 0.801);    
+}
+
+.francesinha-img{
+    max-width: 500px;
+    height: auto;
+    margin: 2.5% 15%;
+}
+/*
+cinzento par div
+background-color: rgb(243 244 246/var(--tw-bg-opacity));
+
+*/
+
+
+
+
